--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Regular Users</h2>
 
 <% @users.each do |user| %>
-  <%= tag.div id: "user-#{user.id}" do %>
+  <%= tag.div id: "user-#{user.slug}" do %>
   <p><%= link_to user.name, admin_user_path(user) %><br/>
   Registered: <%= user.created_at %>
   <% if user.active? %>
