--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -1,7 +1,7 @@
 <h2>My Items for Sale</h2>
 
 <% if current_admin? %>
-<%= link_to 'Add new Item', new_admin_merchant_item_path(@merchant) %>
+<%= link_to 'Add new Item', new_admin_merchant_item_path(@merchant.slug) %>
 <% else %>
 <%= link_to 'Add new Item', new_dashboard_item_path %>
 <% end %>
