--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -9,13 +9,13 @@
 <% end %>
 
 <% if current_admin? %>
-<%= link_to 'My Items', admin_merchant_items_path(@merchant) %>
+<%= link_to 'My Items', admin_merchant_items_path(@merchant.slug) %>
 <% else %>
 <%= link_to 'My Items', dashboard_items_path %>
 <% end %>
 
 <% if current_admin? %>
-<%= button_to "Downgrade to User", admin_merchant_downgrade_path(@merchant), method: :patch %>
+<%= button_to "Downgrade to User", admin_merchant_downgrade_path(@merchant.slug), method: :patch %>
 <% end %>
 
 <%= tag.div id: 'orders' do %>
@@ -25,7 +25,7 @@
     <ul>
       <% @orders.each do |order| %>
         <%= tag.li id: "order-#{order.id}" do %>
-          <%= render partial: "order_card", locals: {order: order} %>
+          <%= render partial: '/merchants/order_card', locals: {order: order} %>
         <% end %>
       <% end %>
     </ul>
