all tests passing

--- a/app/views/dashboard/orders/show.html.erb
+++ b/app/views/dashboard/orders/show.html.erb
@@ -12,16 +12,16 @@
 
   <% @items.each do |item| %>
     <%= tag.div id: "item-#{item.id}" do %>
-      <p><%= link_to item.name, item_path(item) %></p>
+      <p><%= link_to item.name, item_path(item.slug) %></p>
       <p><img id="item-<%= item.id %>-image" alt="image for <%= item.name %>" src="<%= item.image %>" width="150" /></p>
-      <p>Price: <%= number_to_currency(@order.item_price(item)) %></p>
-      <p>Quantity: <%= @order.item_quantity(item) %></p>
+      <p>Price: <%= number_to_currency(@order.item_price(item.id)) %></p>
+      <p>Quantity: <%= @order.item_quantity(item.id) %></p>
       <p>
-      <% if @order.item_fulfilled?(item) %>
+      <% if @order.item_fulfilled?(item.id) %>
         Fulfilled!
       <% else %>
-        <% if current_user.inventory_check(item) >= @order.item_quantity(item) %>
-        <%= button_to 'Fulfill Item', dashboard_order_item_fulfill_path(@order, item), method: :patch %>
+        <% if current_user.inventory_check(item) >= @order.item_quantity(item.id) %>
+        <%= button_to 'Fulfill Item', dashboard_order_item_fulfill_path(@order, item.slug), method: :patch %>
         <% else %>
         Cannot fulfill, not enough inventory
         <% end %>
