--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card float-left m-3" style="width: 18rem;">
-  <a href="<%= item_path(item) %>">
+  <a href="<%= item_path(item.slug) %>">
     <img class="card-img-top" id="item-<%= item.id %>-image" alt="image for <%= item.name %>" src="<%= item.image %>" width="<%= img_width %>" />
   </a>
 
