--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -14,6 +14,7 @@
 <% end %>
 
 <% if @user == current_user %>
+<%= link_to 'My Reviews', profile_reviews_path %>
 <%= link_to 'My Orders', profile_orders_path %>
 <% elsif current_admin? %>
 <%= link_to 'My Orders', admin_user_orders_path(@user) %>
