--- a/app/views/profile/orders/show.html.erb
+++ b/app/views/profile/orders/show.html.erb
@@ -14,7 +14,7 @@
     <%= tag.div id: "oitem-#{oitem.id}" do %>
       <%= render partial: "/profile/orders/order_item", locals: {oitem: oitem, img_width: 150} %>
       <% if @order.status == "completed" %>
-      <p><%= link_to 'Review Item', new_item_review_path(oitem.item_id)%></p>
+      <p><%= link_to 'Review Item', new_item_review_path(oitem.slug)%></p>
       <% end %>
     <% end %>
   <% end %>
