--- a/app/views/profile/orders/show.html.erb
+++ b/app/views/profile/orders/show.html.erb
@@ -13,8 +13,10 @@
   <% @order.order_items.each do |oitem| %>
     <%= tag.div id: "oitem-#{oitem.id}" do %>
       <%= render partial: "/profile/orders/order_item", locals: {oitem: oitem, img_width: 150} %>
-      <% if @order.status == "completed" %>
-      <p><%= link_to 'Review Item', new_item_review_path(oitem.slug)%></p>
+          <% if @order.reviewed_this_order?(oitem.item_id) %>
+            <li> You have already reviewed this item </li>
+          <% elsif (@order.status == "completed") && (@order.reviewed_this_order?(oitem.id) == nil)%>
+            <li><%= link_to 'Review Item', profile_order_new_review_path(@order, oitem.slug) %></li>
       <% end %>
     <% end %>
   <% end %>
