--- a/app/views/profile/orders/show.html.erb
+++ b/app/views/profile/orders/show.html.erb
@@ -14,9 +14,9 @@
     <%= tag.div id: "oitem-#{oitem.id}" do %>
       <%= render partial: "/profile/orders/order_item", locals: {oitem: oitem, img_width: 150} %>
           <% if @order.reviewed_this_order?(oitem.item_id) %>
-            <li> You have already reviewed this item </li>
-          <% elsif (@order.status == "completed") && (@order.reviewed_this_order?(oitem.id) == nil)%>
-            <li><%= link_to 'Review Item', profile_order_new_review_path(@order, oitem.slug) %></li>
+            <li> You have already reviewed this item this order </li>
+          <% elsif (@order.status == "completed") && (@order.reviewed_this_order?(oitem.item_id) == nil) %>
+            <li><%= link_to 'Review Item', profile_order_new_review_path(@order, oitem.id) %></li>
       <% end %>
     <% end %>
   <% end %>
