--- a/app/views/profile/reviews/index.html.erb
+++ b/app/views/profile/reviews/index.html.erb
@@ -6,6 +6,6 @@
     <%= review.score %>
     <%= link_to 'Edit Review' %>
     <%= link_to 'Disable Review' %>
-    <%= link_to 'Delete Review' %>
+    <%= link_to 'Delete Review', profile_order_delete_item_review_path(review.order_item_id, review.id), method: :delete%>
     <% end %>
   </div>
