--- a/app/views/profile/reviews/index.html.erb
+++ b/app/views/profile/reviews/index.html.erb
@@ -4,8 +4,8 @@
     <%= review.title %>
     <%= review.description %>
     <%= review.score %>
-    <%= link_to 'Edit Review' %>
+    <%= link_to 'Edit Review', profile_order_edit_review_path(review.order_item_id, review.id) %>
     <%= link_to 'Disable Review' %>
-    <%= link_to 'Delete Review', profile_order_delete_item_review_path(review.order_item_id, review.id), method: :delete%>
+    <%= link_to 'Delete Review', profile_order_delete_item_review_path(review.order_item_id, review.id), method: :delete %>
     <% end %>
   </div>
