fixes delete error and adds info to cards for correct styling

--- a/app/views/items/_card.html.erb
+++ b/app/views/items/_card.html.erb
@@ -8,6 +8,7 @@
     <p>Description: <em><%= item.description %></em></p>
     <p>Price: <%= number_to_currency(item.price) %></p>
     <p>
+      <p> Average Rating: <%= item.average_score %></p>
       <strong>Sold by:</strong> <%= item.user.name %><br/>
       <strong>In stock:</strong> <%= item.inventory %>
     </p>
